# mpRPC

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: calluserservice.cc.76B2FD52C5B9F007.idx  logger.cc.B23B9C3F7605FF35.idx  logger.h.17FE67009327B70F.idx  logqueue.hpp.53CABA0DD21A4480.idx  mprpcapplication.cc.50EBBAD8241CB82C.idx  mprpcapplication.h.90CFCB8300B097CB.idx  mprpcchannel.cc.1A22D22FBB0D2C6D.idx  mprpcchannel.h.CEC4A1AEC187D854.idx  mprpcconfig.cc.CB63B12EBB351E9B.idx  mprpcconfig.h.F498304B662CA5A3.idx  mprpccontroller.cc.F3A2EBE3E1D103C1.idx  mprpccontroller.h.EBF115019A15CDE5.idx  mprpcheader.pb.cc.80EA621B6A17A3F3.idx  mprpcheader.pb.h.4EED4B79920EC8CB.idx  mprpcprovider.cc.1C5F95D175A258A5.idx  mprpcprovider.h.C8288B1E44755F77.idx  user.pb.cc.A690D0BC41E37735.idx  user.pb.h.218A18E293FE4AE5.idx  userservice.cc.0E6593161D8CFEB1.idx  zookeeperutil.cc.6E83940531F1B1E2.idx  zookeeperutil.h.8960D8EBCC7FEF4F.idx
example/: README.md  user.pb.cc  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
example/include/: user.pb.h
lib/include/: logger.h  logqueue.hpp  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h
src/: CMakeLists.txt  README.md  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcheader.pb.cc  mprpcheader.proto  mprpcprovider.cc  zookeeperutil.cc
src/include/: mprpcapplication.h  mprpcheader.pb.h  zookeeperutil.h
test/: README.md  main.cc  test.pb.h  test.proto
